small edits following comments

--- a/04.equations_inequalities.md
+++ b/04.equations_inequalities.md
@@ -842,7 +842,7 @@ x =& \sqrt[3]{2 + \sqrt{2^2 - 2^3}} + \sqrt[3]{2 - \sqrt{2^2 - 2^3}} =\\
 =& \sqrt[3]{2 + \sqrt{-4}} + \sqrt[3]{2 - \sqrt{-4}}
 :::
 
-However, we can check by substitution that $x_1=-2$, $x_2=1-\sqrt{3}$ are $x_3=1+\sqrt{3}$ are the three **real** solutions to the equation!
+However, we can check by plugging the values back into the equation that $x_1=-2$, $x_2=1-\sqrt{3}$ are $x_3=1+\sqrt{3}$ are the three **real** solutions to the equation!
 
 
 Source and further explanation: [Mathologer](https://youtu.be/N-KXStupwsc?si=pCc6y6ERdc95kRmm&t=1622)
@@ -1180,11 +1180,11 @@ This is equivalent to
 :::{math}
 \begin{cases}
 x-3 < 2 \\
-x-3 > -1
+x-3 > -2
 \end{cases}
 :::
 
-Solving the first inequality we have $x<5$ and solving the second we have $x>2$. Therefore the solution is $(2,5)$.
+Solving the first inequality we have $x<5$ and solving the second we have $x>1$. Therefore the solution is $(1,5)$.
 ```
 
 ## Notes from the lecture
