--- a/10.univariate_integration.md
+++ b/10.univariate_integration.md
@@ -493,48 +493,44 @@ Let $x \in(0, \infty)$. Since $\frac{d}{dx} \ln (x)=\frac{1}{x}$, we have $\int 
 
 This is the integration counterpart to the chain rule of differentiation.
 
-Suppose that $G:(a, b) \to \mathbb{R}$ be a function that is differentiable on the interval $(a, b) \subseteq \mathbb{R}$ and let $g(t)=G^{\prime}(t)=\frac{d G(t)}{d t}$ be its derivative when $t \in(a, b)$
+Suppose that $F:(a, b) \to \mathbb{R}$ be a function that is differentiable on the interval $(a, b) \subseteq \mathbb{R}$ and let $f(x)=F^{\prime}(x)$. So, $\int f(x) dx = F(x) + C$.
 
-Suppose that $t:(c, d) \to(a, b)$ be a function that is differentiable on the interval $(c, d) \subseteq \mathbb{R}$ and let $t^{\prime}(x)=\frac{d t(x)}{dx}$ be its derivative when $x \in(c, d)$
+Suppose that $\omega:(c, d) \to(a, b)$ be a function that is differentiable on the interval $(c, d) \subseteq \mathbb{R}$
 
-Consider the composite function $F:(c, d) \to \mathbb{R}$ defined by $F(x)=G(t(x))$
+Consider the composite function $G=F \circ \omega: (c, d) \to \mathbb{R}$ defined by $G(t)=F(\omega(t))$
 
-Since $G(t)$ is differentiable on $(a, b), t:(c, d) \to(a, b)$, and $t(x)$ is differentiable on $(c, d)$, we know that $F(x)$ is differentiable on $(c, d)$. Denote its derivative by $f(x)=F^{\prime}(x)=\frac{d F(x)}{d t}$ when $x \in(c, d)$
-
-We know from the chain rule of differentiation that $f(x)=F^{\prime}(x)=G^{\prime}(t(x)) t^{\prime}(x)=g(x) t^{\prime}(x)$
-
-Recall that we have $F(x)=G(t(x))$ and $f(x)=F^{\prime}(x)=g(t(x)) t^{\prime}(x)$, where $g(t)=G^{\prime}(t)$
-Thus we know that $F(x)+C=\int F(x) dx=\int g(t(x)) t^{\prime}(x) dx$, where $C \in \mathbb{R}$ is an arbitrary constant
-
-Recall that $d t=\left(\frac{d t(x)}{dx}\right) dx=t^{\prime}(x) dx$. Thus we have
+Differentiating both function, and using the chain rule of differentiation we have 
 
 $$
-\begin{gathered}
-F(x)+C=\int F(x) dx=\int g(t(x)) t^{\prime}(x) dx \\
-=\int g(t) d t=G(t)+C=G(t(x))+C
-\end{gathered}
+G'(t) = \frac{d}{dt} F(\omega(t)) = F'(\omega(t)) \omega'(t) = f(\omega(t))\omega'(t)
 $$
 
-when $G(t)$ is evaluated at the parameterised point $t=t(x)$
+By definition of anti-derivative it follows that 
 
-Note that we need to remember to substitute $t=t(x)$ into $G(t)$ to obtain the correct result here
+$$
+G(t)+ C = \int G'(t) dt = \int f(\omega(t))\omega'(t) dt
+$$
 
+On the other hand, when $x=\omega(t)$, $G(t)=F(x)$, and thus
 
-We now have a framework for discussing the technique of **integration by substitution**
-Clearly, this is the integral counterpart of the chain rule of differentiation
-This techniques is useful in circumstances where each of the following properties is true
+$$
+\int f(x) dx = F(x)+C = G(t)+C = \int f(\omega(t))\omega'(t) dt
+$$
+
+We now have a framework for discussing the technique of **integration by substitution**.
+This techniques is useful in circumstances where each of the following properties is true:
 
 1. You do not know how to calculate the indefinite integral of $f(x)$ with respect to $x$
 
-2. You can see a way to express $f(x)$ as $f(x)=g(t(x)) t^{\prime}(x)$ for which you know the functions $g(t)$ and $t(x)$
+2. You can see a way to express $f(x)$ as $f(x)=g(\omega(t)) \omega^{\prime}(t)$ for which you know the functions $g(x)$ and $\omega(t)$
 
-3. You do know how to calculate the indefinite integral of $g(t)$ with respect to $t$
+3. You do know how to calculate the indefinite integral of $g(x)$ with respect to $x$
 
 
 ```{admonition} Fact
 :class: important
 
-Suppose that $f: I \to \mathbb{R}$ is at least once continuously differentiable on $I$, where $I \subseteq \mathbb{R}$ is a connected open interval, and let $\omega : \Omega \to I$, where $\Omega \subseteq \mathbb{R}$, be a differentiable function. Then:
+Suppose that $f: I \to \mathbb{R}$ is at least once continuously differentiable on $I$, where $I \subseteq \mathbb{R}$ is a connected open interval, and let $\omega : \Omega \to I$, where $\Omega \subseteq \mathbb{R}$, be a differentiable function, then:
 
 $$
 \int f(x) dx = \int f(\omega(t)) \omega^{\prime}(t) dt
@@ -547,19 +543,22 @@ $$
 ```{admonition} Example
 :class: tip
 
-Suppose that we want to find $\int f(x) dx=\int \frac{\ln (x)}{x} dx$
-Let $g(t)=t$ and $t(x)=\ln (x)$
-This means that $g(t(x))=t(x)=\ln (x)$ and $t^{\prime}(x)=\frac{1}{x}$
-Note that $f(x)=\frac{\ln (x)}{x}=g(t(x)) t^{\prime}(x)$ and
-$\int g(t) d t=\int t d t=\frac{t^{2}}{2}+C$
-
-Thus we have
-
 $$
-F(x)+C=\frac{(t(x))^{2}}{2}+C=\frac{(\ln (x))^{2}}{2}+C=\frac{\ln ^{2}(x)}{2}+C 
+\int f(x) dx =
+\int \frac{\ln (x)}{x} dx = 
 $$
 
-As a check on the accuracy of our proposed solution, note that
+Let's make a substitution $t = \ln(x)$, in which case $x=\exp(t)=\omega(t)$ and $\omega'(t)=\exp(t)$.
+We continue
+
+$$
+=
+\int \frac{\ln (\omega(t))}{\omega(t)}\omega'(t) dt = 
+\int \frac{\ln (\exp(t))}{\exp(t)}\exp(t) dt = \\
+\int t dt = t^2/2 + C = (\ln(x))^2/2 + C
+$$
+
+As a check of our solution, note that
 
 $$
 \begin{gathered}
@@ -572,25 +571,24 @@ $$
 ```{admonition} Example
 :class: tip
 
-Suppose that we want to find $\int f(x) dx=\int e^{x^{2}} x dx$
-Let $g(t)=\left(\frac{1}{2}\right) e^{t}$ and $t(x)=x^{2}$
-This means that $g(t(x))=\left(\frac{1}{2}\right) e^{t(x)}=e^{x^{2}}$ and $t^{\prime}(x)=2 x$
-Note that $f(x)=e^{x^{2}} x=g(t(x)) t^{\prime}(x)$ and
-
 $$
-\int g(t) d t=\int\left(\frac{1}{2}\right) e^{t} d t=\left(\frac{1}{2}\right) \int e^{t} d t=\left(\frac{1}{2}\right) e^{t}+C
+\int f(x) dx=\int e^{x^{2}} x dx =
 $$
 
-Thus we have
+Let use a new variable $t=x^2$, in other words $x=\sqrt{t}=\omega(t)$, $\omega'(t) = \frac{1}{2\sqrt{t}}$.
+Continuing
 
 $$
-F(x)+C=\left(\frac{1}{2}\right) e^{t(x)}+C=\left(\frac{1}{2}\right) e^{x^{2}}+C 
+=
+\int e^{t} \sqrt{t} \frac{1}{2\sqrt{t}} dt =
+\frac{1}{2} \int e^{t} dt =
+\frac{1}{2} e^{t} +C = \frac{1}{2} e^{x^2} +C
 $$
 
-As a check on the accuracy of our proposed solution, note that
+As a check we have
 
 $$
-\frac{d}{dx}\left(\left(\frac{1}{2}\right) e^{x^{2}}\right)=\left(\frac{1}{2}\right)(2 x) e^{x^{2}}=x e^{x^{2}}=e^{x^{2}} x
+\frac{d}{dx}\left(\frac{1}{2} e^{x^{2}}\right)=\frac{1}{2}(2 x) e^{x^{2}}=x e^{x^{2}}=e^{x^{2}} x
 $$
 ```
 
@@ -602,23 +600,9 @@ This is the integration counterpart to the product rule of differentiation.
 
 
 Suppose that $u:(a, b) \to \mathbb{R}$ and $v:(a, b) \to \mathbb{R}$ are both functions that are differentiable on the interval $(a, b) \subseteq \mathbb{R}$
-Suppose also that there exist two other functions that are both differentiable on the interval $(a, b) \subseteq \mathbb{R}, G:(a, b) \to \mathbb{R}$ and $G:(a, b) \to \mathbb{R}$, such that $G^{\prime}(x)=u^{\prime}(x) v(x)$ and $H^{\prime}(x)=v^{\prime}(x) u(x)$
 
 Consider the function $J:(a, b) \to \mathbb{R}$ defined by $J(x)=u(x) v(x)$
 We know from the product rule of differentiation that
-
-$$
-\frac{d}{dx}(u(x) v(x))=\left(\frac{d u(x)}{dx}\right) v(x)+\left(\frac{d v(x)}{dx}\right) u(x)
-$$
-
-which can be rewritten as
-
-$$
-\frac{d}{dx}(u(x) v(x))=u^{\prime}(x) v(x)+v^{\prime}(x) u(x)
-$$
-
-
-We have obtained the expression
 
 $$
 \frac{d}{dx}(u(x) v(x))=u^{\prime}(x) v(x)+v^{\prime}(x) u(x)
@@ -630,7 +614,7 @@ $$
 u^{\prime}(x) v(x)=\frac{d}{dx}(u(x) v(x))-v^{\prime}(x) u(x)
 $$
 
-Thus we know that
+And since the two functions in the RHS and the LHS are equal, so are their anti-derivatives
 
 $$
 \begin{gathered}
@@ -640,29 +624,20 @@ $$
 $$
 
 
-Note that
+We already know that
 
 $$
 \int \frac{d}{dx}(u(x) v(x)) dx=u(x) v(x)+C
 $$
 
-where $C \in \mathbb{R}$ is an arbitrary constant
-
-This gives us
+where $C \in \mathbb{R}$ is an arbitrary constant, and therefore we have
 
 $$
 \int u^{\prime}(x) v(x) dx=u(x) v(x)-\int v^{\prime}(x) u(x) dx+C 
 $$
 
-Note also that $\int u^{\prime} v dx$ and $\int v^{\prime} u dx$ both implicitly incorporate arbitrary constants
+Note that $\int u^{\prime} v dx$ and $\int v^{\prime} u dx$ both implicitly incorporate arbitrary constants
 If we absorb the explicit arbitrary constant $(C)$ in the above expression into the implicity arbitrary constants in the $\int u^{\prime} v dx$ and $\int v^{\prime} u dx$ terms in some appropriate fashion, then we can rewrite that expression as
-
-$$
-\int u^{\prime}(x) v(x) dx=u(x) v(x)-\int v^{\prime}(x) u(x) dx
-$$
-
-
-We have obtained the expression
 
 $$
 \int u^{\prime}(x) v(x) dx=u(x) v(x)-\int v^{\prime}(x) u(x) dx
@@ -966,7 +941,8 @@ $$
 Number $I_f(a,b)$ from the previous fact is called the **definite integral** of $f$ over $[a,b]$ and is denoted by
 
 $$
-\lim_{n \to \infty} S(T_n) = \int_{a}^{b} f(x) dx
+\lim_{n \to \infty} S(T_n) = \int_{a}^{b} f(x) dx \quad \text{for all} \quad 
+T_n: \lim_{n \to \infty} r(T_n) = 0
 $$
 
 This type of definite integral is known as a **Riemann definite integral**
