--- a/12.practice_for_exam.md
+++ b/12.practice_for_exam.md
@@ -8,7 +8,7 @@ jupytext:
     jupytext_version: 1.11.5
 ---
 
-# Practice questions
+# 🔬 Practice questions
 
 Please, use the following materials to practice for the exam:
 
