notes from the lecture on may 14

--- a/10.univariate_integration.md
+++ b/10.univariate_integration.md
@@ -1329,6 +1329,16 @@ $$
 
 
 
+## Notes from the lecture
+
+````{admonition} Hand written notes from the lecture
+:class: note
+
+```{image} _static/img/notes/14may/1.png
+   :width: 75%
+```
+
+````
 
 
 
