--- a/12.practice_for_exam.md
+++ b/12.practice_for_exam.md
@@ -8,7 +8,21 @@ jupytext:
     jupytext_version: 1.11.5
 ---
 
-# 🔬 Practice questions
+# 🛟 Preparing for the exam
+
+## Learning materials
+
+- These lecture notes contain the facts and examples you have to know
+- See the [front page](https://math.iskh.me/index.html)
+
+> When you find it hard:
+> 1. Find the relevant material in the text book {cite:ps}`sydsaeter2016`
+> 2. Go through examples and make sure you understand every step
+> 3. Go through tutorial problems
+> 4. Practice using the problems listed below
+
+
+## Practice problems
 
 Please, use the following materials to practice for the exam:
 
