Final exam schedule

--- a/12.practice_for_exam.md
+++ b/12.practice_for_exam.md
@@ -10,6 +10,16 @@ jupytext:
 
 # 🛟 Preparing for the exam
 
+```{admonition} Final exam
+:class: important
+
+- **Friday May 31, 2pm**
+- **Manning Clark Hall, room 1.04, Cultural Centre Kambri**
+- 3 hours exam + 15 minutes reading time
+- closed book, no materials allowed
+
+```
+
 ## Learning materials
 
 - These lecture notes contain the facts and examples you have to know
