--- a/12.practice_for_exam.md
+++ b/12.practice_for_exam.md
@@ -10,6 +10,8 @@ jupytext:
 
 # 🛟 Preparing for the exam
 
+<small>⏱ <span class="eta"></span> | <span class="words"></span> words</small>
+
 ```{admonition} Final exam
 :class: important
 
@@ -19,6 +21,13 @@ jupytext:
 - closed book, no materials allowed
 
 ```
+
+```{tip}
+- Do not be late ⏰
+- Start with easier questions (for you)
+- Manage time while writing the exam ⏱
+```
+
 
 ## Learning materials
 
