--- a/12.practice_for_exam.md
+++ b/12.practice_for_exam.md
@@ -57,3 +57,29 @@ I am purposefully not giving exact reference to the practice problems, as going 
 
 ```
 
+## Practice exam
+
+::::::{tab-set}
+:::::{tab-item} Exam paper
+Please, see the [downloadable pdf](_static/img/notes/21may/practice_exam.pdf)
+:::::
+:::::{tab-item} Solution
+
+```{image} _static/img/notes/21may/1.png
+   :width: 75%
+```
+```{image} _static/img/notes/21may/2.png
+   :width: 75%
+```
+```{image} _static/img/notes/21may/3.png
+   :width: 75%
+```
+```{image} _static/img/notes/21may/4.png
+   :width: 75%
+```
+```{image} _static/img/notes/21may/5.png
+   :width: 75%
+```
+
+:::::
+::::::
